// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectedAreasPanel > When there are areas selected > snapshot test 1`] = `
<DocumentFragment>
  <div
    class="sc-dhKdcB jLcTYV"
    data-testid="selected-areas-panel"
  >
    <div
      data-testid="standard-selected-areas-panel"
    >
      <div
        class="sc-jXbUNg hBAgjp"
      >
        <span
          class="src__LabelText-sc-1lbxenh-0 sc-kpDqfm bKqlAx kATRGH"
        >
          Selected areas (2)
        </span>
      </div>
      <div
        class="sc-gEvEer cmUCgj"
        data-testid="pill-container"
      >
        <button
          aria-label="Remove area East of England NHS Region"
          class="sc-fqkvVR dcQCKA"
          data-testid="remove-icon-div"
        >
          <svg
            class="sc-aXZVg kKRHvy"
            data-testid="x-icon"
            fill="none"
            height="16"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            viewBox="0 0 25 25"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
        <div
          class="sc-eqUAAy eqmima"
          data-testid="filter-name"
        >
          <p
            style="margin: 0px;"
          >
            <span
              class="sc-dcJsrY gzjaQs"
            >
              East of England NHS Region
            </span>
             
            <span
              class="sc-iGgWBj iaVgID"
            >
              NHS Regions
            </span>
          </p>
        </div>
      </div>
      <div
        class="sc-gEvEer cmUCgj"
        data-testid="pill-container"
      >
        <button
          aria-label="Remove area North East and Yorkshire NHS Region"
          class="sc-fqkvVR dcQCKA"
          data-testid="remove-icon-div"
        >
          <svg
            class="sc-aXZVg kKRHvy"
            data-testid="x-icon"
            fill="none"
            height="16"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            viewBox="0 0 25 25"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
        <div
          class="sc-eqUAAy eqmima"
          data-testid="filter-name"
        >
          <p
            style="margin: 0px;"
          >
            <span
              class="sc-dcJsrY gzjaQs"
            >
              North East and Yorkshire NHS Region
            </span>
             
            <span
              class="sc-iGgWBj iaVgID"
            >
              NHS Regions
            </span>
          </p>
        </div>
      </div>
      <div />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectedAreasPanel > When there is a group area selected > snapshot test 1`] = `
<DocumentFragment>
  <div
    class="sc-dhKdcB jLcTYV"
    data-testid="selected-areas-panel"
  >
    <div
      data-testid="group-selected-areas-panel"
    >
      <div
        class="sc-jXbUNg hBAgjp"
      >
        <span
          class="src__LabelText-sc-1lbxenh-0 sc-kpDqfm bKqlAx kATRGH"
        >
          Selected areas (2)
        </span>
      </div>
      <div
        class="sc-gEvEer cmUCgj"
        data-testid="pill-container"
      >
        <button
          aria-label="Remove area "
          class="sc-fqkvVR dcQCKA"
          data-testid="remove-icon-div"
        >
          <svg
            class="sc-aXZVg kKRHvy"
            data-testid="x-icon"
            fill="none"
            height="16"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            viewBox="0 0 25 25"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
        <div
          class="sc-eqUAAy eqmima"
          data-testid="filter-name"
        >
          <p
            style="margin: 0px;"
          >
            <span
              class="sc-gsFSXq jGMYON"
            >
              All areas in 
            </span>
             
            <span
              class="sc-kAyceB wReRO"
            >
              NHS Primary Care Networks
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
